--- a/Antoni/app/src/sass/main.scss
+++ b/Antoni/app/src/sass/main.scss
@@ -4,4 +4,15 @@
   height: 600px;
   background: #0096D5;
   background-image: linear-gradient(0deg, rgba(255,255,255,0.50) 0%, rgba(0,0,0,0.50) 100%);
+
+  .box {
+    position: absolute;
+    display: inline-block;
+    border: 1px solid black;
+    width: 20px;
+    height: 20px;
+    left: 10px;
+    top: 10px;
+    transition:left 1s ease-in-out;
+  }
 }
